<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/road2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp"
        android:layout_marginBottom="-200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_ID_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:drawableStart="@drawable/id"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/login_etID"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="number" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/Register_etUserName"
            android:drawableStart="@drawable/username"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_password_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/register_etPassword"
            android:drawableStart="@drawable/pwd"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_validation_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:drawableStart="@drawable/pwd"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/Register_etPassword_Validation" />

        <EditText
            android:id="@+id/et_phone_number_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/phone"
            android:inputType="number"
            android:hint="phone number"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>
        <EditText
            android:id="@+id/et_faculty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_class"
            android:hint="faculty"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register_btn"
            android:textColor="@color/black"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint ="@color/White"
            android:fontFamily="@font/text"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>